# CookGPT

./: .coverage  .env  .env.development  .env.production  .env.testing  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  HISTORY.md  MANIFEST.in  Makefile  Pipfile  Procfile  README.md  activate  apply.sh  coverage.xml  create_admins.sh  gunicorn.conf.py  manage.py  mkdocs.yml  openapi.json  pyproject.toml  quick_tests.py  requirements-dev.txt  requirements-test.txt  requirements.txt  settings.toml  setup.py  test_genai.py  test_streaming.py  wsgi.py
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/workflows/: deploy.yml  main.yml  release.yml
cookgpt/: __init__.py  __main__.py  app.py  base.py  docs.py  globals.py  logging.py  models.py  sentry.py  utils.py
cookgpt/auth/: __init__.py  cli.py  models.py  schemas.py  views.py
cookgpt/auth/data/: enums.py  examples.py  schemas.py  validators.py
cookgpt/auth/models/: __init__.py  tokens.py  user.py  user_info.py
cookgpt/chatbot/: __init__.py  callback.py  chain.py  cli.py  context.py  memory.py  models.py  tasks.py  utils.py  views.py
cookgpt/chatbot/data/: enums.py  examples.py  fake_data.py  prompts.py  schemas.py
cookgpt/chatbot/data/templates/: system_prompt.txt
cookgpt/chatbot/views/: __init__.py  chat.py  thread.py
cookgpt/ext/: __init__.py  admin.py  auth.py  cache.py  commands.py  config.py  cors.py  database.py  imagekit.py  redisflow.py  validators.py
cookgpt/ext/restapi/: resources.py
cookgpt/ext/webui/: views.py
cookgpt/socketchef/: app.py  namespaces.py  validator.py
cookgpt/socketchef/chat/: query.py
cookgpt/static/: app.js
cookgpt/templates/: index.html
cookgpt/user/: __init__.py  cli.py  models.py
migrations/versions/: 3fea1acabb3a_added_media_to_chats.py  4cb13b2692a5_initial_migration.py  547068f5ddda_made_lastname_optional.py  a3855c5e53a6_chat_media_description.py  e70d1c2e1441_changed_chatmedia_url_type.py  f3d6087e900c_initial_migration.py
redisflow/: __init__.py  __main__.py  app.py
socketchef/: app.py
tests/: __init__.py  conftest.py  test_auth.py  test_extensions.py  test_user.py  test_validators.py  utils.py
tests/old/: __init__.py
tests/old/test_models/: __init__.py  test_basemodel.py  test_message.py  test_token.py  test_user.py  test_userinfo.py
tests/test_auth/: test_cli.py  test_token.py  test_user.py  test_validators.py
tests/test_chatbot/: test_chat.py  test_thread.py
tests/test_extensions/: test_config.py
tests/test_views/: test_auth_views.py  test_chat_views.py  test_thread_views.py  test_user_views.py
